# jweather

./: Cargo.toml  README.md
src/: main.rs  speak_trait.rs  weather_trait.rs
src/cmdargs/: cmdargs_struct.rs  mod.rs
src/current/: current_struct.rs  mod.rs
src/forecast/: forecast_struct.rs  mod.rs
src/ipapi/: ipapi_struct.rs  mod.rs
