[package]
name = "jweather"
version = "0.1.0"
authors = ["join3r <join3r@gmail.com>"]
edition = "2018"
license = "CC-BY-NC-ND-4.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "native-tls-vendored"] }
structopt = "0.3"
anyhow = "1"
env_logger = "0.8"
log = "0.4"
rodio = "0.13"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
